--- a/patient-frontend/src/CSS/List.css
+++ b/patient-frontend/src/CSS/List.css
@@ -39,17 +39,16 @@ h2 {
   background-color: #f1f1f1;
   transition: 0.2s ease-in-out;
 }
-
+.action-buttons {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  flex-wrap: nowrap;   
+}
 .view-button {
   background-color: #0d6efd;
   color: white;
-  border: none;
-  padding: 6px 12px;
-  border-radius: 4px;
-  cursor: pointer;
-  font-weight: 500;
-  margin: 0 5px;
-  min-width: 80px;
 }
 
 .view-button:hover {
@@ -57,14 +56,21 @@ h2 {
 }
 
 .delete-btn {
-  background-color: red;      
+  background-color: red; 
+  color: white;
+}
+
+.view-button,
+.delete-btn {
+  width: 90px;
+  height: 34px;
   padding: 6px 12px;
   border-radius: 4px;
   cursor: pointer;
   font-weight: 600;
-  margin-left: 20px;
   margin: 0 5px;
-  min-width: 80px;
+  border: none;
+  color: white;
 }
 
 .delete-btn:hover {
