--- a/patient-frontend/src/CSS/List.css
+++ b/patient-frontend/src/CSS/List.css
@@ -4,17 +4,29 @@
 
 h2 {
   text-align: center;
-  margin-bottom: 25px;
+  margin-bottom: 25px;  
   font-weight: 600;
 }
 
-
-.table {
+.table-wrapper {
   width: 100%;
   table-layout: fixed;   
   border-collapse: collapse;
+  transition: transform 0.25s ease, box-shadow 0.25s ease;
 }
 
+.table {
+  width: 85%;
+  margin: 40px auto;          
+  background: #ffffff;
+  border-radius: 16px;        
+  box-shadow: 0 15px 35px rgba(0, 0, 0, 0.08);
+  border-collapse: collapse;
+  overflow: hidden;           
+}
+.table tbody tr td {
+  border-bottom: 1px solid #111;
+}
 .table th,
 .table td {
   text-align: center;
@@ -22,23 +34,40 @@ h2 {
   padding: 12px;
   word-wrap: break-word;
   width: 20%;   
+  border-collapse: collapse;
 }
 
 
 .table thead {
-  background-color: #f8f9fa;
+ background: linear-gradient(135deg, #3498db, #2c3e50);
 }
 
 .table th {
   font-weight: 600;
-  border-bottom: 2px solid #dee2e6;
+  border-bottom: 1px solid #dee2e6;
 }
 
+.table thead th:first-child {
+  border-top-left-radius: 16px;
+}
+
+.table thead th:last-child {
+  border-top-right-radius: 16px;
+}
+
+
+.table tbody tr {
+  border-bottom: 1px solid #dee2e6;
+  transition: all 0.2s ease;
+}
 
 .table tbody tr:hover {
-  background-color: #f1f1f1;
+  background-color: #d9eaff;
   transition: 0.2s ease-in-out;
+  transform: translateY(-4px);
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.08);
 }
+
 .action-buttons {
   display: flex;
   justify-content: center;
@@ -76,4 +105,26 @@ h2 {
 .delete-btn:hover {
   background-color: darkred;
   color: white;
+}
+@media (max-width: 768px) {
+
+  .table th,
+  .table td {
+    padding: 10px;
+    font-size: 14px;
+  }
+
+  .view-button,
+  .delete-btn {
+    width: 75px;
+    height: 30px;
+    font-size: 13px;
+  }
+
+}
+@media (max-width: 480px) {
+  .action-buttons {
+    flex-direction: column;
+    gap: 6px;
+  }
 }
